# Stellar-K8s

./: .commitlintrc.yaml  .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  SECURITY.md  SOROBAN_DASHBOARD_COMPLETE.md  TODO-SECURITY.md  TODO.md  WEBHOOK_BENCHMARK_COMPLETE.md  build.rs  cliff.toml  docker-compose.dev.yml  docker-compose.yml  gh_log.txt  krew-plugin.yaml  log.txt  package-lock.json  starfield.html  test-precommit.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_ADVISORY_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/skills/rust-blockchain/: SKILL.md
.github/workflows/: benchmark.yml  chaos-tests.yml  ci.yml  commit-lint.yml  performance-regression.yml  pre-commit.yml  release.yml  security-scan.yml  verify-operator-boot.yml  webhook-benchmark.yml
benchmarks/: run-regression-test.sh  run-webhook-benchmark.sh
benchmarks/k6/: operator-load-test.js  security-pen.js  upgrade-load-test.js  webhook-load-test.js
charts/stellar-operator/: values.schema.json  values.yaml
charts/stellar-operator/templates/: crd.yaml  deployment.yaml  feature-flags-configmap.yaml  pdb.yaml  rbac.yaml
charts/stellar-operator/tests/: crd_test.yaml  deployment_test.yaml  pdb_test.yaml  rbac_test.yaml  secret_test.yaml  service_test.yaml  serviceaccount_test.yaml  webhook_test.yaml
config/: operator-config.yaml  stellar-bench.yaml
config/crd/: stellarnode-crd.yaml
config/manifests/gatekeeper/: approved-registries-constraint.yaml  approved-registries-template.yaml  (+5 more)
config/samples/: invalid-network-empty.yaml  invalid-network-special-chars.yaml
docs/: EDGE_CASES.md  FORMAL_VERIFICATION.md  PQC_READINESS.md  SECURITY_TESTING.md  WEBHOOK_BENCHMARK_SUMMARY.md  api-reference.md  archive-pruning.md  benchmarking.md  development.md  diff-utility.md  dr-failover.md  errors.md  fmea-stellarnode.md  gatekeeper-policies.md  governance.md  image-pinning.md  ingress-guide.md  kubectl-plugin.md  log-redaction-policy.md  metallb-bgp-anycast.md  mtls-guide.md  pod-disruption-budget.md  quickstart.md  resource-limits.md  scalability.md  service-mesh.md  wasm-webhook.md
docs/adr/: 0001-wasm-admission-webhook.md  0002-rust-language-choice.md  0003-kube-rs-finalizers.md  0004-crd-versioning-strategy.md  README.md
examples/: canary-rollout.yaml  cross-cluster-direct-ip.yaml  cross-cluster-external-dns.yaml  cross-cluster-istio.yaml  cross-cluster-submariner.yaml  custom-metrics-hpa.yaml  cve-auto-patch-example.yaml  dr-setup.yaml  horizon-canary-example.yaml  horizon-with-health-check.yaml  horizon.yaml  ingress-example.yaml  peer-discovery-example.yaml  soroban-rpc.yaml  validator-mainnet.yaml  validator-testnet.yaml
formal_verification/: README.md
monitoring/: SOROBAN_DASHBOARD_GUIDE.md  grafana-dashboard.json  grafana-security.json  security-alerts.yaml
policy/: kyverno-policies.yaml
security/tests/: zap-scan.sh
src/: error.rs  infra.rs  kubectl_plugin.rs  lib.rs  log_scrub.rs  main.rs  preflight.rs  runbook.rs  search.rs  sidecar.rs
src/backup/: scheduler.rs
src/carbon_aware/: scheduler.rs
src/controller/: archive_prune.rs  audit.rs  blue_green.rs  captive_core.rs  conditions.rs  cost.rs  cross_cluster.rs  cve_test.rs  diff.rs  feature_flags.rs  finalizers.rs  label_propagation.rs  metrics.rs  mod.rs  mtls.rs  oci_snapshot.rs  operator_config.rs  peer_discovery.rs  peer_discovery_test.rs  read_pool.rs  reconciler.rs  reconciler_test.rs  remediation.rs  remediation_test.rs  resources.rs  resources_test.rs  resources_toml_tests.rs  traffic_test.rs  vpa.rs  vsl.rs
src/crd/: mod.rs  schema_utils.rs  stellar_node.rs  tests.rs  types.rs
src/rest_api/: auth.rs  custom_metrics.rs  dashboard_dto.rs  dashboard_handlers.rs  dashboard_ui.html  dto.rs  handlers.rs  mod.rs  server.rs  sustainability.rs
src/scheduler/: scoring.rs
src/webhook/: mod.rs  mutation.rs  runtime.rs  server.rs
tests/: e2e_kind.rs  gatekeeper_policies_test.rs  json_logging_test.rs  service_mesh_e2e_test.rs  service_mesh_guide_test.rs
(+11 files in other folders)
