[package]
name = "stellar-k8s"
version = "0.1.0"
edition = "2021"
authors = ["Stellar K8s Contributors"]
description = "Cloud-Native Kubernetes Operator for Stellar Infrastructure"
license = "Apache-2.0"
repository = "https://github.com/stellar/stellar-k8s"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
toml = "0.8"
# Kubernetes client and operator framework
kube = { version = "0.94", features = [
    "runtime",
    "derive",
    "unstable-runtime",
    "admission",
] }
kube-runtime = { version = "0.94", features = ["unstable-runtime"] }
k8s-openapi = { version = "0.22", default-features = false, features = [
    "v1_30",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Schema generation for CRDs
schemars = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Pinned to fix RUSTSEC-2026-0009 (stack exhaustion DoS); also used transitively
# by rcgen/yasna/x509-parser.
time = { version = "0.3.47", optional = true }
# Pinned to fix RUSTSEC-2026-0007; used transitively by many HTTP/async crates.
bytes = { version = "1.11.1", optional = true }

# Hostname for leader election
hostname = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-opentelemetry = "0.22"

# OpenTelemetry for distributed tracing
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.14", features = [
    "grpc-tonic",
    "http-proto",
] }

# HTTP client for health checks
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls-manual-roots",
    "native-tls",
    "multipart",
] }

# REST API (optional)
axum = { version = "0.8.8", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }

# Metrics
prometheus-client = { version = "0.22", optional = true }
once_cell = { version = "1", optional = true }

# TLS and certificate generation
rustls = "0.23"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
axum-server = { version = "0.7.0", features = ["tls-rustls"] }
rustls-pki-types = "1.14.0"
x509-parser = "0.16"

# Wasm runtime for custom validation plugins
wasmtime = { version = "24.0.6", optional = true }
wasmtime-wasi = { version = "24.0.6", features = ["preview1"], optional = true }

# Additional crypto for webhook TLS
tokio-rustls = { version = "0.26", optional = true }

# Base64 for Wasm plugin loading
base64 = "0.21"

# SHA256 for plugin integrity verification
sha2 = "0.10"
hex = { version = "0.4", optional = true }
rand = "0.8"
rand_distr = "0.5.1"

# Backup scheduler dependencies
cron = "0.15"
flate2 = "1"
async-trait = "0.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"

[build-dependencies]
chrono = "0.4"
serde_json = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }

[features]
default = ["rest-api", "metrics", "admission-webhook"]
rest-api = ["axum", "tower", "tower-http"]
metrics = ["prometheus-client", "once_cell"]
admission-webhook = [
    "wasmtime",
    "wasmtime-wasi",
    "tokio-rustls",
    "hex",
    "axum",
    "tower",
    "tower-http",
]
axum = ["dep:axum"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
wat = "1.245"

[[bin]]
name = "stellar-operator"
path = "src/main.rs"

[[bin]]
name = "stellar-sidecar"
path = "src/sidecar.rs"

[[bin]]
name = "kubectl-stellar"
path = "src/kubectl_plugin.rs"

[[bin]]
name = "stellar-completions"
path = "src/bin/completions.rs"
